the current date/time instead of the cover date of the story. [Scott]

=item *

Added search by Keyword to "Find Media". [Scott]

=item *

When the "Filter by Site Context" preference is turned on, if a user does a
search and then changes the site context, the search results will not change
to the new site until the user submits a new search. Reported by Matt Rolf
(Bug #1337). [David]

=back

=head2 Bug Fixes

=over

=item *

Really fix bug 1232 (saving categories with 3 keywords), that was falsely claimed
to have been fixed in 1.10.3. [Scott]

=item *

Fixed bug 1340, where Preview buttons weren't working within Related assets.
[Scott & David]

=item *

The download link in Media Profile wasn't popping up into a new window on some
browsers due to a typo. Spotted by Tatiana Titova. [Scott]

=item *

In the Contributors Manager, sometimes there aren't "New" links, and this was
causing the latest Locale::Maketext indigestion. Spotted by John Watson. [Scott]

=item *

Fix for bug 1344 (spotted by Ed Guzman) and hopefully better fix for bug 1326
(my suggestion wasn't quite right). The handling of E<lt>publish_statusE<gt>
in bric_soap has been a bit dodgy. Also changed publish_status to deploy_status
in C<Bric::SOAP::Template>. [Scott]

=item *

The state for Log lists was getting stuck, so if you go to the 2nd page of the
log for a media, say, every log thereafter was the same. Reported by John
Kirkwood. [Scott]

=item *

Fix both parts of bug 1345, Bulk Edit had problems with blank lines. [Scott]

=item *

Fixed CCS bug which was preventing the jump buttons from displaying in Firefox
and Safari. [Matt Rolf]

=item *

Tweaked Bricolage Instance Name display. [Matt Rolf]

=item *

Fixed bug 1343, View Diff wasn't working in IE. Reported by Ed Guzman. [Scott]

=item *

A category with associated with a story different URIs but the same name as
the primary category can now properly be deleted. Reported by Matt Rolf (Bug
#1341). [David]

=item *
